Radius overflow fix

--- a/bfo/app/front/css/bfo-oddstable-sass.scss
+++ b/bfo/app/front/css/bfo-oddstable-sass.scss
@@ -258,6 +258,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   position: relative;
+  overflow: hidden;
 }
 
 .table-last-changed {
